--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <title>Exemplo 5</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cartão</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
-    <h1>Cabeçalho 1</h1>
-    <h2>Sub Cabeçalho 2</h2>
-    <h3>Sub Cabeçalho 3</h3>
-    <p>Este é meu primeiro parágrafo.</p>
-    <p>Este é meu segundo parágrafo.</p>
-    <div style="background: skyblue;">
-        Conteúdo da <span style="color: red">div</span>.
-    </div>
+
+    <div class="cartao">
+        <h1 class="titulo">Maria Eduarda</h1>
+        <div class="corpo"></div>
+        <img src="foto.jpg" alt="" class="imagem" height="400rem" width="300rem">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </p>
+        <footer class="rodape">
+            <a href="curriculo.html">Currículo</a>
+            <button>Ok</button>
+        </footer>
+    </div>  
+
+
 </body>
 
 </html>
