--- a/pratica4/exercicio1/exercicio1.2/index.html
+++ b/pratica4/exercicio1/exercicio1.2/index.html
@@ -17,17 +17,17 @@
 
         tr:hover {
             background-color: #ffffff !important;
-            color: #FF4500;
+            color: #002fff;
             font-weight: bold;
             font-size: 1.5rem;
         }
 
         tr:nth-child(even) {
-            background-color: #8b9dc3;
+            background-color: #6999ff;
         }
 
         tr:nth-child(odd) {
-            background-color: #dfe3ee;
+            background-color: #e9e8ff;
         }
     </style>
 </head>
@@ -36,24 +36,60 @@
 
     <table>
         <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-            <th>Header 3</th>
+            <th>Alunos</th>
+            <th>Nota P1</th>
+            <th>Nota P2</th>
+            <th>Nota T1</th>
+            <th>Total</th>
+            <th>Faltas</th>
         </tr>
         <tr>
-            <td>Data 1</td>
-            <td>Data 2</td>
-            <td>Data 3</td>
+            <td>Mathias</td>
+            <td>30</td>
+            <td>25</td>
+            <td>16</td>
+            <td>71</td>
+            <td>2</td>
         </tr>
         <tr>
-            <td>Data 4</td>
-            <td>Data 5</td>
-            <td>Data 6</td>
+            <td>Júlia</td>
+            <td>25</td>
+            <td>29</td>
+            <td>22</td>
+            <td>76</td>
+            <td>0</td>
         </tr>
         <tr>
-            <td>Data 7</td>
-            <td>Data 8</td>
-            <td>Data 9</td>
+            <td>Marina</td>
+            <td>30</td>
+            <td>28</td>
+            <td>22</td>
+            <td>80</td>
+            <td>0</td>
+        </tr>
+    </tr>
+        <td>Luiz</td>
+            <td>23</td>
+            <td>23</td>
+            <td>24</td>
+            <td>70</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>Jasmin</td>
+            <td>28</td>
+            <td>25</td>
+            <td>24</td>
+            <td>77</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>Bruno</td>
+            <td>27</td>
+            <td>26</td>
+            <td>17</td>
+            <td>70</td>
+            <td>6</td>
         </tr>
     </table>
 
