--- a/curriculo.html
+++ b/curriculo.html
@@ -11,11 +11,16 @@
 <body>
 
     <div class="cartao">
-        <h1 class="titulo">Dados Pessoais</h1>
+        <h1 class="titulo">Ana Laura</h1>
         <div class="corpo"></div>
         <img src="foto.jpg" alt="" class="imagem" height="400rem" width="300rem">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Ana Laura Barreto 24 anos;
+            Experiência em design;
+            Trabalha na empresa lonexpress a 1 ano e 6 meses
+            Designer criativa e apaixonada por transformar ideias em projetos visuais impactantes. Com uma sólida formação em design e uma habilidade excepcional em combinar estética e funcionalidade, estou comprometida em criar soluções de design únicas que atendam às necessidades do cliente. Minha abordagem é orientada para o detalhe e focada no usuário, com a capacidade de comunicar eficazmente por meio de diversos meios visuais.
+
+
         </p>
         <footer class="rodape">
             <a href="curriculo.html">Currículo</a>
@@ -25,20 +30,3 @@
         </footer>
     </div>  
 
-    <div class="cartao">
-        <h1 class="titulo">Dados Pessoais</h1>
-        <div class="corpo"></div>
-        <img src="foto.jpg" alt="" class="imagem" height="400rem" width="300rem">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        </p>
-        <footer class="rodape">
-            <a href="curriculo.html">Currículo</a>
-            <button>Ok</button>
-
-        
-        </footer>
-    </div>
-</body>
-
-</html>
