--- a/pratica 10/index.html
+++ b/pratica 10/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Confeitaria Maria Chocolate</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <header>
-        <div class="logoImg">
-            <img src="logo.png" alt="Maria Chocolate" height="100" />
-        </div>
-        <div class="titulo">
-            <h1>Confeitando para a alegria da sua vida...</h1>
+
+        <div class="logoTitulo">
+            <div class="logoImg">
+                <img src="logo.png" alt="Maria Chocolate" height="100" />
+            </div>
+            <div class="painel-titulo">
+                <div class="titulo">
+                    <h1>Confeitando para a alegria da sua vida...</h1>
+                </div><br>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Bolos</a></li>
+                        <li><a href="#">Tortas</a></li>
+                        <li><a href="#">Festas</a></li>
+                        <li><a href="contatos.html">Contatos</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#" >Home</a></li>
-            <li><a href="#" >Bolos</a></li>
-            <li><a href="#" >Tortas</a></li>
-            <li><a href="#" >Festas</a></li>
-            <li><a href="#" >Contatos</a></li>          
-        </ul>
-    </nav>
-    <section>
+    <main>
         <div class="produto">
             <div class="produtoImagem">
                 <img src="imagem1.png" alt="Bolo" height="135">
@@ -86,18 +93,21 @@
                 <p>Torta de Maracujá</p>
                 <span class="preco">R$ 123,45</span>
             </div>
-            <div class="produto">
-                <div class="produtoImagem">
-                    <img src="imagem8.jpg" alt="Bolo" height="135">
-                </div>
-                <div class="detalhes">
-                    <p>Bolo Brigadeiro</p>
-                    <span class="preco">R$ 60,50</span>
-                </div>
         </div>
-    </section>
+        <div class="produto">
+            <div class="produtoImagem">
+                <img src="imagem8.jpg" alt="Bolo" height="135">
+            </div>
+            <div class="detalhes">
+                <p>Bolo Brigadeiro</p>
+                <span class="preco">R$ 60,50</span>
+            </div>
+        </div>
+    </main>
     <footer>
-        <p>Desenvolvido como exercício da UC Usabilidade, Desenvolvimento Web, Mobile e Jogos. ©Copyright 2022. Todos os Direitos Reservados.</p>
+        <p>Desenvolvido como exercício da UC Usabilidade, Desenvolvimento Web, Mobile e Jogos. ©Copyright 2022. Todos os
+            Direitos Reservados.</p>
     </footer>
 </body>
+
 </html>
