--- a/pratica 10/festas.html
+++ b/pratica 10/festas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Confeitaria Maria Chocolate</title>
-    <link rel="stylesheet" href="estilo_contatos.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <div class="painel-titulo">
                 <div class="titulo">
                     <h1>Confeitando para a alegria da sua vida...</h1>
-                </div>
+                </div><br>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -31,28 +31,25 @@
         </div>
     </header>
     <main>
-        <form action="">
-            <h1>Entre em Contato</h1>
-            <label>Nome:
-                <input type="text" placeholder="informe seu nome">
-            </label>
-
-            <label>E-mail:
-                <input type="text" placeholder="informe seu e-mail">
-            </label>
-
-            <label>Tipo do contato:
-                <input type="text" placeholder="ex elogio, reclamação...">
-            </label>
-
-            <label>Mensagem:
-                <input type="text" placeholder="">
-            </label>
-
-            <input type="submit" value="Ok">
-        </form>
+        <div class="produto">
+            <div class="produtoImagem">
+                <img src="imagem3.png" alt="Bolo" height="135">
+            </div>
+            <div class="detalhes">
+                <p>Cupcakes (3 unidades)</p>
+                <span class="preco">R$ 27,90</span>
+            </div>
+        </div>
+        <div class="produto">
+            <div class="produtoImagem">
+                <img src="imagem9.png" alt="Bolo" height="135">
+            </div>
+            <div class="detalhes">
+                <p>Bolo Brigadeiro</p>
+                <span class="preco">R$ 60,50</span>
+            </div>
+        </div>
     </main>
-
     <footer>
         <p>Desenvolvido como exercício da UC Usabilidade, Desenvolvimento Web, Mobile e Jogos. ©Copyright 2022. Todos os
             Direitos Reservados.</p>
