--- a/pratica 10/bolos.html
+++ b/pratica 10/bolos.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Confeitaria Maria Chocolate</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo_bolos.css">
 </head>
 
 <body>
     <header>
-
         <div class="logoTitulo">
             <div class="logoImg">
                 <img src="logo.png" alt="Maria Chocolate" height="100" />
@@ -17,7 +16,7 @@
             <div class="painel-titulo">
                 <div class="titulo">
                     <h1>Confeitando para a alegria da sua vida...</h1>
-                </div><br>
+                </div>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -51,47 +50,11 @@
         </div>
         <div class="produto">
             <div class="produtoImagem">
-                <img src="imagem3.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Cupcakes (3 unidades)</p>
-                <span class="preco">R$ 27,90</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem4.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Torta Holandesa</p>
-                <span class="preco">R$ 122,00</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
                 <img src="imagem5.png" alt="Bolo" height="135">
             </div>
             <div class="detalhes">
                 <p>Bolinho anão</p>
                 <span class="preco">R$ 99,90</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem6.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Torta Nobre (Fatia)</p>
-                <span class="preco">R$ 13,90</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem7.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Torta de Maracujá</p>
-                <span class="preco">R$ 123,45</span>
             </div>
         </div>
         <div class="produto">
