--- a/pratica 10/tortas.html
+++ b/pratica 10/tortas.html
@@ -33,47 +33,11 @@
     <main>
         <div class="produto">
             <div class="produtoImagem">
-                <img src="imagem1.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Bolo Delicia</p>
-                <span class="preco">R$ 136,90</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem2.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Floresta Negra</p>
-                <span class="preco">R$ 144,50</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem3.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Cupcakes (3 unidades)</p>
-                <span class="preco">R$ 27,90</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
                 <img src="imagem4.png" alt="Bolo" height="135">
             </div>
             <div class="detalhes">
                 <p>Torta Holandesa</p>
                 <span class="preco">R$ 122,00</span>
-            </div>
-        </div>
-        <div class="produto">
-            <div class="produtoImagem">
-                <img src="imagem5.png" alt="Bolo" height="135">
-            </div>
-            <div class="detalhes">
-                <p>Bolinho anão</p>
-                <span class="preco">R$ 99,90</span>
             </div>
         </div>
         <div class="produto">
@@ -96,11 +60,11 @@
         </div>
         <div class="produto">
             <div class="produtoImagem">
-                <img src="imagem9.png" alt="Bolo" height="135">
+                <img src="imagem7.png" alt="Bolo" height="135">
             </div>
             <div class="detalhes">
-                <p>Bolo Brigadeiro</p>
-                <span class="preco">R$ 60,50</span>
+                <p>Torta de Maracujá</p>
+                <span class="preco">R$ 123,45</span>
             </div>
         </div>
     </main>
